--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-slate
+title: James Grigg - Portfolio
+description: Software Engineering Portfolio - James Grigg, Semester 2, 2018
